# Display

./: readme.md
Design/: (5)Display小项目设计小结.docx  Vscode Linux下opencv及多线程socket(3)--Apple的学习笔记.md  Vscode Linux下opencv及多进程socket(4).docx  Vscode mingw下opencv及多线程socket(2).docx  Vscode mingw下opencv及多线程socket--Apple的学习笔记.docx
code/01/Display/: CMakeLists.txt  head.hpp  key.cpp  key.hpp  main.cpp  readme.txt  server.cpp  server.hpp
code/01/client_test/: CMakeLists.txt  main.cpp
code/02/Display/: CMakeLists.txt  main.cpp  通信协议设计.xlsx
code/02/Display/include/: HMI.hpp  ctrl.hpp  head.hpp  server.hpp
code/02/Display/src/: HMI.cpp  ctrl.cpp  display.cpp  server.cpp
code/02/client_test/: main.cpp
code/03/Display_Linux/: main.cpp
code/03/Display_Linux/include/: HMI.hpp  display.hpp  head.hpp  key.hpp  lock.hpp  server.hpp
code/03/Display_Linux/src/: CMakeLists.txt  HMI.cpp  display.cpp  key.cpp  lock.cpp  server.cpp
code/03/client_test/: CMakeLists.txt  main.cpp
code/04/: 多进程设计.xlsx  通信协议设计.xlsx
code/04/Display_Linux/: CMakeLists.txt  main.cpp
code/04/Display_Linux/include/: HMI.hpp  cfg.hpp  display.hpp  head.hpp  key.hpp  lock.hpp  server.hpp
code/04/Display_Linux/src/: HMI.cpp  ctrl.cpp  display.cpp  key.cpp  lock.cpp  server.cpp
code/04/client_test/: main.cpp
